--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -682,7 +682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('')"
+    "top_travel_cities.append('Beaumont')"
    ]
   },
   {
