--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -815,7 +815,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_travel_"
+   ]
   },
   {
    "cell_type": "code",
